--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@elysiajs/bearer": "^1.4.1",
-    "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/bearer": "^1.4.3",
+    "@elysiajs/cors": "^1.4.1",
     "@elysiajs/swagger": "^1.3.1",
     "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
-    "elysia": "^1.4.16",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
-    "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2",
+    "elysia": "^1.4.22",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.18.0",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "resend": "6.4.2",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.28"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@eslint/js": "^9.39.1",
-    "@faker-js/faker": "^10.1.0",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@faker-js/faker": "^10.2.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "bun-types": "^1.3.2",
-    "eslint": "^9.39.1",
+    "bun-types": "^1.3.8",
+    "eslint": "^9.39.2",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "install": "^0.13.0",
-    "lint-staged": "^16.2.6",
-    "typescript-eslint": "^8.46.4"
+    "lint-staged": "^16.2.7",
+    "typescript-eslint": "^8.54.0"
   },
   "module": "src/index.js",
   "lint-staged": {
